fix(doc/readme): altera descricao do readme para desafio bonus

--- a/README
+++ b/README
@@ -2,3 +2,6 @@ Este é o README do projeto. Basicamente este é um desafio lançado pelos profe
 
 
 Esta é a primeira alteração deste arquivo.
+
+
+Nova alteração para desafio bônus.
