--- a/README
+++ b/README
@@ -1,7 +1,1 @@
-Este é o README do projeto. Basicamente este é um desafio lançado pelos professores. É isso pessoal!
-
-
-Esta é a primeira alteração deste arquivo.
-
-
-Nova alteração para desafio bônus.
+Projeto de aprendizado de Java/Maven da turma DevClass2022.
