--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Projeto de aprendizado de Java/Maven da turma DevClass2022.
+Projeto de aprendizado de Java/Maven que realizei durante as atividades da turma DevClass2022.
